EVNT-47: Migrate to Platfrom 2.7.0 and Support Java 21